--- a/app/src/main/res/layout/activity_theme_settings.xml
+++ b/app/src/main/res/layout/activity_theme_settings.xml
@@ -360,6 +360,15 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <FrameLayout
+                android:id="@+id/buttonShapeLayout"
+                android:layout_marginTop="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+
+            </FrameLayout>
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/themeStyleLayout"
                 android:layout_width="match_parent"
