--- a/app/src/main/res/layout/activity_main_round.xml
+++ b/app/src/main/res/layout/activity_main_round.xml
@@ -223,8 +223,8 @@
                     android:id="@+id/mainOpsMiddleGuide"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    app:layout_constraintGuide_begin="201dp" />
+                    app:layout_constraintGuide_percent="0.5"
+                    android:orientation="horizontal" />
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/mainOpsTopGuide"
