--- a/app/src/main/res/layout/activity_main_round.xml
+++ b/app/src/main/res/layout/activity_main_round.xml
@@ -63,6 +63,7 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/equationLayout2"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:clipChildren="false"
