--- a/app/src/main/res/layout/activity_main_round.xml
+++ b/app/src/main/res/layout/activity_main_round.xml
@@ -95,6 +95,7 @@
                         android:textAlignment="viewEnd"
                         android:textColor="#FEFEFE"
                         android:textSize="42dp"
+                        android:maxLines="1"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
