--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -20,8 +20,8 @@
         <Button
             android:id="@+id/bgAnim"
             style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="1080dp"
-            android:layout_height="780dp"
+            android:layout_width="1000dp"
+            android:layout_height="850dp"
             android:background="@color/darkColorPrimary"
             android:clickable="false"
             android:foreground="?attr/selectableItemBackground"
@@ -37,12 +37,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="12dp"
-            android:layout_marginBottom="82dp"
+            android:layout_marginBottom="-13dp"
             android:alpha="0.7"
             android:textColor="@color/white"
             android:textSize="26sp"
             android:textAlignment="viewEnd"
-            app:layout_constraintBottom_toBottomOf="@+id/equationScrollView"
+            app:layout_constraintBottom_toTopOf="@+id/equationScrollView"
             app:layout_constraintEnd_toStartOf="@+id/deleteLayout"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -88,6 +88,7 @@
                         android:textAlignment="viewEnd"
                         android:textColor="#FEFEFE"
                         android:textSize="42dp"
+                        android:maxLines="1"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
