--- a/app/src/main/res/layout-land/activity_main_round.xml
+++ b/app/src/main/res/layout-land/activity_main_round.xml
@@ -249,7 +249,7 @@
                     android:id="@+id/sPlus"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:background="@drawable/circle_op"
+                    android:background="@drawable/circle_op_land"
                     android:onClick="operation"
                     android:text="+"
                     android:textAllCaps="false"
@@ -266,7 +266,7 @@
                     android:id="@+id/sMinus"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:background="@drawable/circle_op"
+                    android:background="@drawable/circle_op_land"
                     android:onClick="operation"
                     android:text="-"
                     android:textAllCaps="false"
@@ -283,7 +283,7 @@
                     android:id="@+id/sMulti"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:background="@drawable/circle_op"
+                    android:background="@drawable/circle_op_land"
                     android:onClick="operation"
                     android:text="×"
                     android:textAllCaps="false"
@@ -300,7 +300,7 @@
                     android:id="@+id/sDiv"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:background="@drawable/circle_op"
+                    android:background="@drawable/circle_op_land"
                     android:onClick="operation"
                     android:text="÷"
                     android:textAllCaps="false"
