--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -68,8 +68,262 @@
 
 
 
+    <!-- Cursor Colors -->
+    <style name="d_03DAC5"
+        parent="ThemeOverlay.AppCompat.Dark">
+        <item name="colorAccent">#03DAC5</item>
+    </style>
+
+    <style name="l_03DAC5"
+        parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorAccent">#03DAC5</item>
+    </style>
+
+    <style name="d_009688"
+        parent="ThemeOverlay.AppCompat.Dark">
+        <item name="colorAccent">#009688</item>
+    </style>
+
+    <style name="l_009688"
+        parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorAccent">#009688</item>
+    </style>
+
+    <style name="d_54AF57"
+        parent="ThemeOverlay.AppCompat.Dark">
+        <item name="colorAccent">#54AF57</item>
+    </style>
+
+    <style name="l_54AF57"
+        parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorAccent">#54AF57</item>
+    </style>
+
+    <style name="d_00C7E0"
+        parent="ThemeOverlay.AppCompat.Dark">
+        <item name="colorAccent">#00C7E0</item>
+    </style>
+
+    <style name="l_00C7E0"
+        parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorAccent">#00C7E0</item>
+    </style>
+
+    <style name="d_2196F3"
+        parent="ThemeOverlay.AppCompat.Dark">
+        <item name="colorAccent">#2196F3</item>
+    </style>
+
+    <style name="l_2196F3"
+        parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorAccent">#2196F3</item>
+    </style>
+
+    <style name="d_0D2A89"
+        parent="ThemeOverlay.AppCompat.Dark">
+        <item name="colorAccent">#0D2A89</item>
+    </style>
+
+    <style name="l_0D2A89"
+        parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorAccent">#0D2A89</item>
+    </style>
+
+    <style name="d_3F51B5"
+        parent="ThemeOverlay.AppCompat.Dark">
+        <item name="colorAccent">#3F51B5</item>
+    </style>
+
+    <style name="l_3F51B5"
+        parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorAccent">#3F51B5</item>
+    </style>
+
+    <style name="d_6C42B6"
+        parent="ThemeOverlay.AppCompat.Dark">
+        <item name="colorAccent">#6C42B6</item>
+    </style>
+
+    <style name="l_6C42B6"
+        parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorAccent">#6C42B6</item>
+    </style>
+
+    <style name="d_E32765"
+        parent="ThemeOverlay.AppCompat.Dark">
+        <item name="colorAccent">#E32765</item>
+    </style>
+
+    <style name="l_E32765"
+        parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorAccent">#E32765</item>
+    </style>
+
+    <style name="d_F44336"
+        parent="ThemeOverlay.AppCompat.Dark">
+        <item name="colorAccent">#F44336</item>
+    </style>
+
+    <style name="l_F44336"
+        parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorAccent">#F44336</item>
+    </style>
+
+    <style name="d_E77369"
+        parent="ThemeOverlay.AppCompat.Dark">
+        <item name="colorAccent">#E77369</item>
+    </style>
+
+    <style name="l_E77369"
+        parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorAccent">#E77369</item>
+    </style>
+
+    <style name="d_FF9800"
+        parent="ThemeOverlay.AppCompat.Dark">
+        <item name="colorAccent">#FF9800</item>
+    </style>
+
+    <style name="l_FF9800"
+        parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorAccent">#FF9800</item>
+    </style>
+
+    <style name="d_FFC107"
+        parent="ThemeOverlay.AppCompat.Dark">
+        <item name="colorAccent">#FFC107</item>
+    </style>
+
+    <style name="l_FFC107"
+        parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorAccent">#FFC107</item>
+    </style>
+
+    <style name="d_FEF65B"
+        parent="ThemeOverlay.AppCompat.Dark">
+        <item name="colorAccent">#FEF65B</item>
+    </style>
+
+    <style name="l_FEF65B"
+        parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorAccent">#FEF65B</item>
+    </style>
+
+    <style name="d_66BB6A"
+        parent="ThemeOverlay.AppCompat.Dark">
+        <item name="colorAccent">#66BB6A</item>
+    </style>
+
+    <style name="l_66BB6A"
+        parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorAccent">#66BB6A</item>
+    </style>
+
+    <style name="d_873804"
+        parent="ThemeOverlay.AppCompat.Dark">
+        <item name="colorAccent">#873804</item>
+    </style>
+
+    <style name="l_873804"
+        parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorAccent">#873804</item>
+    </style>
+
+    <style name="d_9BCEE9"
+        parent="ThemeOverlay.AppCompat.Dark">
+        <item name="colorAccent">#9BCEE9</item>
+    </style>
+
+    <style name="l_9BCEE9"
+        parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorAccent">#9BCEE9</item>
+    </style>
 
 
 
+    <!-- Settings Colors -->
+    <style name="ds_03DAC5"
+        parent="Theme.MaterialComponents">
+        <item name="colorAccent">#03DAC5</item>
+    </style>
 
+    <style name="ds_009688"
+        parent="Theme.MaterialComponents">
+        <item name="colorAccent">#009688</item>
+    </style>
+
+    <style name="ds_54AF57"
+        parent="Theme.MaterialComponents">
+        <item name="colorAccent">#54AF57</item>
+    </style>
+
+    <style name="ds_00C7E0"
+        parent="Theme.MaterialComponents">
+        <item name="colorAccent">#00C7E0</item>
+    </style>
+
+    <style name="ds_2196F3"
+        parent="Theme.MaterialComponents">
+        <item name="colorAccent">#2196F3</item>
+    </style>
+
+    <style name="ds_0D2A89"
+        parent="Theme.MaterialComponents">
+        <item name="colorAccent">#0D2A89</item>
+    </style>
+
+    <style name="ds_3F51B5"
+        parent="Theme.MaterialComponents">
+        <item name="colorAccent">#3F51B5</item>
+    </style>
+
+    <style name="ds_6C42B6"
+        parent="Theme.MaterialComponents">
+        <item name="colorAccent">#6C42B6</item>
+    </style>
+
+    <style name="ds_E32765"
+        parent="Theme.MaterialComponents">
+        <item name="colorAccent">#E32765</item>
+    </style>
+
+    <style name="ds_F44336"
+        parent="Theme.MaterialComponents">
+        <item name="colorAccent">#F44336</item>
+    </style>
+
+    <style name="ds_E77369"
+        parent="Theme.MaterialComponents">
+        <item name="colorAccent">#E77369</item>
+    </style>
+
+    <style name="ds_FF9800"
+        parent="Theme.MaterialComponents">
+        <item name="colorAccent">#FF9800</item>
+    </style>
+
+    <style name="ds_FFC107"
+        parent="Theme.MaterialComponents">
+        <item name="colorAccent">#FFC107</item>
+    </style>
+
+    <style name="ds_FEF65B"
+        parent="Theme.MaterialComponents">
+        <item name="colorAccent">#FEF65B</item>
+    </style>
+
+    <style name="ds_66BB6A"
+        parent="Theme.MaterialComponents">
+        <item name="colorAccent">#66BB6A</item>
+    </style>
+
+    <style name="ds_873804"
+        parent="Theme.MaterialComponents">
+        <item name="colorAccent">#873804</item>
+    </style>
+
+    <style name="ds_9BCEE9"
+        parent="Theme.MaterialComponents">
+        <item name="colorAccent">#9BCEE9</item>
+    </style>
 </resources>
