--- a/app/src/main/res/layout-sw411dp/activity_main.xml
+++ b/app/src/main/res/layout-sw411dp/activity_main.xml
@@ -74,7 +74,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     tools:ignore="RtlSymmetry">
 
-                    <EditText
+                    <androidx.appcompat.widget.AppCompatEditText
                         android:id="@+id/equation"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
