--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -1143,17 +1143,89 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/styleContainer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:paddingVertical="8dp"
+            android:paddingHorizontal="12dp"
+            android:background="@drawable/editor_pill_background"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <View
+                android:id="@+id/styleDivider"
+                android:layout_width="1dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginVertical="0dp"
+                android:background="?android:attr/listDivider"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/styleLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="@string/style"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/styleDivider"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/shapeContainer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:paddingVertical="8dp"
+            android:paddingHorizontal="12dp"
+            android:background="@drawable/editor_pill_background"
+            app:layout_constraintStart_toEndOf="@id/styleContainer"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <ImageView
+                android:id="@+id/shapeIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_outline_shape_line_20"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <TextView
+                android:id="@+id/shapeLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="@string/shape"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/shapeIcon"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <ImageButton
             android:id="@+id/undo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="?selectableItemBackgroundBorderless"
-            android:padding="8dp"
-            android:layout_marginStart="16dp"
+            android:padding="6dp"
+            android:layout_marginStart="18dp"
             android:layout_marginVertical="8dp"
             android:src="@drawable/ic_baseline_undo_24"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@id/bottomBarDivider"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
@@ -1161,8 +1233,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="?selectableItemBackgroundBorderless"
-            android:padding="8dp"
-            android:layout_marginStart="16dp"
+            android:padding="6dp"
+            android:layout_marginStart="8dp"
             android:layout_marginVertical="8dp"
             android:src="@drawable/ic_baseline_redo_24"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -1173,55 +1245,32 @@
             android:id="@+id/bottomBarDivider"
             android:layout_width="1dp"
             android:layout_height="0dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="16dp"
             android:layout_marginVertical="10dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/redo"/>
-
-        <ImageButton
-            android:id="@+id/lightDarkSpacer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="?selectableItemBackgroundBorderless"
-            android:padding="8dp"
-            android:onClick="toggleLightDark"
-            android:visibility="invisible"
-            android:layout_marginStart="24dp"
-            android:layout_marginVertical="8dp"
-            android:src="@drawable/ic_baseline_dark_mode_24"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/bottomBarDivider"/>
-
-        <ImageButton
-            android:id="@+id/lightDarkToggle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="?selectableItemBackgroundBorderless"
-            android:padding="8dp"
-            android:onClick="toggleLightDark"
-            android:src="@drawable/ic_baseline_dark_mode_24"
-            app:layout_constraintBottom_toBottomOf="@id/lightDarkSpacer"
-            app:layout_constraintTop_toTopOf="@id/lightDarkSpacer"
-            app:layout_constraintStart_toStartOf="@id/lightDarkSpacer"
-            app:layout_constraintEnd_toEndOf="@id/lightDarkSpacer"/>
-
-        <ImageButton
-            android:id="@+id/save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="?selectableItemBackgroundBorderless"
-            android:padding="8dp"
-            android:onClick="onSaveClick"
-            android:layout_marginStart="16dp"
-            android:layout_marginVertical="8dp"
-            android:src="@drawable/ic_baseline_save_24"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/lightDarkSpacer"/>
+            app:layout_constraintStart_toEndOf="@id/shapeContainer"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/editorDrawerBG"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#0A0A0A"
+        android:elevation="12dp"
+        android:alpha="0.28" />
+
+
+    <FrameLayout
+        android:id="@+id/editorDrawer"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:elevation="16dp"
+        app:layout_constraintWidth="parent=0.68"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editorToolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
