--- a/app/src/main/res/menu/editor_menu.xml
+++ b/app/src/main/res/menu/editor_menu.xml
@@ -3,28 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/backups"
+        android:id="@+id/options"
         android:orderInCategory="103"
-        android:icon="@drawable/ic_baseline_list_24"
-        android:title="Backups"
+        android:icon="@drawable/ic_baseline_menu_thin_24"
+        android:title="Options"
         app:showAsAction="ifRoom"/>
-
-    <item
-        android:id="@+id/help"
-        android:orderInCategory="105"
-        android:title="Help"
-        app:showAsAction="never"/>
-
-    <item
-        android:id="@+id/resetAll"
-        android:orderInCategory="106"
-        android:title="Reset to Defaults"
-        app:showAsAction="never"/>
-
-    <item
-        android:id="@+id/advancedOptions"
-        android:orderInCategory="107"
-        android:title="Advanced Options"
-        app:showAsAction="never"/>
 
 </menu>
