--- a/app/src/main/res/layout/backup_card.xml
+++ b/app/src/main/res/layout/backup_card.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="24dp"
             android:text="Name"
             android:textColor="#FFFFFF"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:background="?selectableItemBackground"
-            android:text="RESTORE"
+            android:text="APPLY"
             android:textColor="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="@+id/themeName"
             app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,7 @@
             android:id="@+id/buttonBG"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="24dp"
             android:background="@color/colorAccentDarker"
             android:clipToPadding="true"
             android:elevation="8dp"
@@ -57,7 +57,7 @@
                 android:id="@+id/rename"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="8dp"
+                android:layout_marginVertical="6dp"
                 android:layout_marginEnd="24dp"
                 android:background="?selectableItemBackgroundBorderless"
                 android:padding="8dp"
@@ -69,7 +69,7 @@
                 android:id="@+id/delete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="8dp"
+                android:layout_marginVertical="6dp"
                 android:layout_marginEnd="16dp"
                 android:background="?selectableItemBackgroundBorderless"
                 android:padding="8dp"
@@ -81,7 +81,7 @@
                 android:id="@+id/share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="8dp"
+                android:layout_marginVertical="6dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="24dp"
                 android:background="?selectableItemBackgroundBorderless"
@@ -95,7 +95,7 @@
                 android:id="@+id/favorite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="8dp"
+                android:layout_marginVertical="6dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginBottom="24dp"
                 android:background="?selectableItemBackgroundBorderless"
