--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -1272,7 +1272,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:animateLayoutChanges="true"
-        android:background="@color/blackNavItemBG"
+        android:background="@color/editorDrawerBG"
         android:elevation="12dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -1285,8 +1285,9 @@
         android:id="@+id/editorDrawer"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:elevation="16dp"
-        app:layout_constraintWidth="parent=0.72"
+        android:elevation="13dp"
+        android:animateLayoutChanges="true"
+        app:layout_constraintWidth="parent=0.75"
         app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editorToolbar">
