--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -19,6 +19,43 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
+        android:id="@+id/undo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?selectableItemBackgroundBorderless"
+        android:padding="6dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginVertical="8dp"
+        android:src="@drawable/ic_baseline_undo_24"
+        app:layout_constraintBottom_toBottomOf="@id/editorToolbar"
+        app:layout_constraintEnd_toStartOf="@id/redo"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/redo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?selectableItemBackgroundBorderless"
+        android:padding="6dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginVertical="8dp"
+        android:src="@drawable/ic_baseline_redo_24"
+        app:layout_constraintBottom_toBottomOf="@id/editorToolbar"
+        app:layout_constraintEnd_toStartOf="@+id/bottomBarDivider"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/bottomBarDivider"
+        android:layout_width="1dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginVertical="10dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/editorToolbar"
+        app:layout_constraintEnd_toStartOf="@id/drawerButton"/>
+
+    <ImageButton
         android:id="@+id/drawerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -1227,43 +1264,6 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <ImageButton
-            android:id="@+id/undo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="?selectableItemBackgroundBorderless"
-            android:padding="6dp"
-            android:layout_marginStart="18dp"
-            android:layout_marginVertical="8dp"
-            android:src="@drawable/ic_baseline_undo_24"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@id/bottomBarDivider"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageButton
-            android:id="@+id/redo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="?selectableItemBackgroundBorderless"
-            android:padding="6dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginVertical="8dp"
-            android:src="@drawable/ic_baseline_redo_24"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/undo"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <View
-            android:id="@+id/bottomBarDivider"
-            android:layout_width="1dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginVertical="10dp"
-            android:background="?android:attr/listDivider"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/shapeContainer"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
